# Catalyst-AI-Innovation-FPT

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-render.txt
Fontend/translator-app/: index.html  package-lock.json  package.json  vite.config.ts
Fontend/translator-app/public/: audio-processor.js
Fontend/translator-app/src/: App.tsx  index.css
apps/api/: main.py  websocket.py
apps/api/routes/: debug.py
config/: default.yaml  demo.yaml  offline.yaml
core/: config.py
core/asr/: base.py  faster_whisper.py  mock.py
core/audio/: resample.py  segmenter.py  vad.py
core/observability/: logging.py  metrics.py  tracing.py
core/session/: events.py  manager.py  queues.py  routing.py  state.py  storage.py
core/translation/: base.py  glossary.py  llm_api.py  local_model.py  normalization.py  service.py  stable_prefix.py  validator.py
core/tts/: base.py  local_tts.py
plan/: task_list_meeting_translator.md
scripts/: benchmark.py  download_models.py  preflight.py  run_demo.py
tests/evaluation/: golden_set.json
tests/unit/: test_audio.py  test_config.py  test_events.py  test_queue_failure.py  test_session.py  test_translation.py  test_vad_segmenter.py
