[project]
name = "meeting-translator-backend"
version = "0.1.0"
description = "Backend for a real-time Vietnamese-English meeting translator."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "pydantic>=2.7",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "scipy>=1.12",
  "underthesea>=6.8",
  "faster-whisper>=1.0",
  "torch>=2.2",
  "silero-vad>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]
local-translation = ["transformers>=4.43", "sentencepiece>=0.2", "accelerate>=0.33"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

